tests/paczka1/fuzzy1/23562835.err
Error in line 2: 56jdUZR5 S232 17,75
Error in line 9: 56jdUZR5 S232 6,8
Error in line 10: 56jdUZR5 S768 40,2
Error in line 17: inausPW S54 81,6
Error in line 18: inausPW S232 65,3
Error in line 20: inausPW S768 2,8
Error in line 22: inausPW S232 74,9
Error in line 26: ZoD7zcÄÄ S54 26,2
Error in line 33: ZoD7zcjj S54 14,57
Error in line 21: ZoD7zcjj S54 22,6
